<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FindMyDevice</string>
    <string name="Ok" translatable="false">@android:string/ok</string>
    <string name="loading">Loading…</string>
    <string name="help">Help</string>
    <string name="copy" translatable="false" tools:override="true">@android:string/copy</string>
    <string name="copied">Copied</string>
    <string name="paste" translatable="false">@android:string/paste</string>
    <string name="accept">accept</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="Edit">Edit</string>
    <string name="GPS">GPS</string>
    <string name="Cell">Cell</string>
    <string name="request_failed_title">Network Request Failed</string>
    <string name="request_failed_status_code">Status code</string>
    <string name="request_failed_response_body">Response Body</string>
    <string name="request_failed_exception">Exception</string>
    <string name="Granted">Granted: </string>
    <string name="Info_CORE" translatable="false">CORE</string>
    <string name="Info_GPS" translatable="false">GPS</string>
    <string name="Info_DND" translatable="false">DND</string>
    <string name="Info_DEVICE_ADMIN" translatable="false">DeviceAdmin</string>
    <string name="Info_Overlay" translatable="false">Overlay</string>
    <string name="Info_SecureSettings" translatable="false">SecureSettings</string>
    <string name="Info_Notification_Access">Notification Access</string>
    <string name="Info_Camera" translatable="false">Camera</string>
    <string name="Info_FMD_Command">FMD-Command:</string>
    <string name="Info_Server_Enabled">Service:</string>
    <string name="Info_Server_Registered">Registered:</string>
    <string name="Info_Server_Push">Push:</string>
    <string name="bottom_nav_commands">Commands</string>
    <string name="bottom_nav_transports">Transport Channels</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="Settings_Settings">Settings</string>
    <string name="Settings_FMDConfig">FMD-Config</string>
    <string name="Settings_FMDServer" translatable="false">FMD Server</string>
    <string name="Settings_WhiteList">Allowed Contacts</string>
    <string name="Settings_OpenCellId">OpenCelliD</string>
    <string name="Settings_Permissions">Permissions</string>
    <string name="Settings_Import">Import Settings</string>
    <string name="Settings_Import_Success">Import successful</string>
    <string name="Settings_Import_Failed">Import failed</string>
    <string name="Settings_Export">Export Settings</string>
    <string name="Settings_Logs">Logs</string>
    <string name="Settings_About">About</string>
    <string name="Settings_FMD_via_Pin_Description">Allows you to communicate with FMD via a PIN. This allows you to send commands from a phone number that is not in the Allowed Contacts list.</string>
    <string name="Settings_Pin_Description">Used as confirmation before wiping the device and for anonymous usage of the service.</string>
    <string name="Settings_Enter_Pin">Enter PIN</string>
    <string name="pin">PIN</string>
    <string name="pin_repeat">Repeat PIN</string>
    <string name="Settings_FMDCommand_Description">The command used to communicate with the FMD.</string>
    <string name="Settings_Ringer_Tone_Description">Select a ringtone that will be played when "fmd ring" is sent.</string>
    <string name="Settings_Select_Ringtone">Select Ringtone</string>
    <string name="Settings_Lockscreenmessage_Description">Lock Screen Message:\nWhen locking the device, this message will appear on the lock screen.</string>
    <string name="Settings_FMD_Server_General">General</string>
    <string name="Settings_FMD_Server_Server_URL">Server URL:</string>
    <string name="Settings_FMD_Server_User_ID">User ID:</string>
    <string name="Settings_FMD_Server_ID_Desc">You need the user ID to find your device with FMD Server. Write it down and keep it safe.</string>
    <string name="Settings_FMDServer_Change_Password_Button">Change Password</string>
    <string name="Settings_FMDServer_Logout_Button">Log out</string>
    <string name="Settings_FMDServer_Delete_Button">Delete Data</string>
    <string name="Settings_FMDServer_Alert_DeleteData">Delete Data</string>
    <string name="Settings_FMDServer_Alert_DeleteData_Desc">This will delete all data from the Server! Are you sure?</string>
    <string name="Settings_FMDServer_Push_Description_Missing">Sending commands from FMD Server to your phone requires a UnifiedPush distributor app. Install one, and then return here. It will automatically be detected.</string>
    <string name="Settings_FMDServer_Push_Description_Available">Successfully registered for push notifications.</string>
    <string name="Settings_FMDServer_Push_Open_UP">Open UnifiedPush Website</string>
    <string name="Settings_FMDServer_Update_Interval_Title">Update Interval</string>
    <string name="Settings_FMDServer_Update_Interval_Description">FMD uploads the device\'s location every X minutes.</string>
    <string name="Settings_FMDServer_Location_Type_Title">Location Source</string>
    <string name="Settings_FMDServer_Location_Type_Description">The source(s) from which the location data is uploaded at regular intervals in the background.\nIf none is selected, no locations are uploaded regularly. (You can still use the web interface to force an upload. This requires push.)</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Title">Upload on Low Battery</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Description">Upload the location of this device when the battery level goes low. This requires Notification Access.</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_repeat">Repeat New Password</string>
    <string name="server_version">Server version</string>
    <string name="server_version_error">Error getting server version</string>
    <string name="server_version_error_low_version">At least server version {MIN} is required, but the selected server has version {CURRENT}. Continue at your own risk.</string>
    <string name="Settings_FMDServer_AddAccount">FMD Server: Login/Register</string>
    <string name="Settings_FMDServer_Info">With FMD Server you can send commands over the internet, from the server to the app. You can also view the device location on a map or view pictures taken by the device. For self-hosting instructions, see the website.</string>
    <string name="Settings_FMDServer_open_website">Open FMD Server Website</string>
    <string name="Settings_FMDServer_use_default_server">Use Nulide\'s public server</string>
    <string name="Settings_FMDServer_Server_Url">Server URL</string>
    <string name="Settings_FMDServer_Login">Login</string>
    <string name="Settings_FMDServer_Register">Register</string>
    <string name="Settings_FMDServer_Alert_PrivacyPolicy_Title">Privacy Policy</string>
    <string name="password">Password</string>
    <string name="registration_token">Registration Token</string>
    <string name="registration_token_hint">Private instances may require a secret token. Leave this empty if the instance is public.</string>
    <string name="Whitelist_help">The contacts in this list are allowed to send FMD commands via SMS. Commands from everyone else will be ignored.</string>
    <string name="Whitelist_empty">No allowed contacts. Click the button to add some!</string>
    <string name="WhiteList_Add_Contact">Add Contact</string>
    <string name="WhiteList_Select_Number">Select one of the phone numbers.</string>
    <string name="Alert_First_Time_contact_added">Congratulations. You have added your first contact. You can now communicate with FMD by sending a SMS message that contains \"fmd\" from the allowed phone number. When everything works, the application will respond.</string>
    <string name="OpenCellId_OpenCellId" translatable="false">OpenCelliD</string>
    <string name="OpenCellId_API_Key_Description" translatable="false">API Access Token:</string>
    <string name="OpenCellId_help">FMD can use the OpenCelliD service to get an approximate location based on the cell tower that the phone is connected to. An internet connection is required for every location query. You also need to create an account at OpenCelliD and get your own API Access Token.</string>
    <string name="OpenCellId_privacy">Privacy: keep in mind that OpenCelliD learns your current cell tower and thus your location with every API query.</string>
    <string name="OpenCellId_open_website">Open OpenCelliD website</string>
    <string name="OpenCellId_test_opencellid">Test OpenCelliD Connection</string>
    <string name="OpenCellId_test_no_connection">No cell connection</string>
    <string name="settings_exported">Settings exported</string>
    <string name="about">About</string>
    <string name="about_source_code">Source Code</string>
    <string name="about_wiki">Wiki</string>
    <string name="app_description">FMD (Find My Device) allows you to remotely locate your device. You can communicate with FMD over SMS, instant messengers, or using FMD Server. Locate your device, make it ring, lock it, or wipe it - all from remote.</string>
    <string name="notify_crypto_update_title">Action required</string>
    <string name="notify_crypto_update_text">You need to update some settings to continue using FMD. Click to open.</string>
    <string name="server_unregister_failed_title">Unregistering failed</string>
    <string name="server_unregister_failed_body">Unregistering failed with the following error: {ERROR}\n\nYou can continue anyway, but your account might not have been deleted from the server. If you continue, your account will be deleted locally from this device.</string>
    <string name="server_unregister_continue_anyway">Continue anyway</string>
    <string name="server_unregister_dont_continue">Don\'t continue</string>
    <string name="cmd_missing_permissions">Cannot run command %s: Missing permission(s) %s.</string>
    <string name="cmd_camera_description_short">Take a picture</string>
    <string name="cmd_camera_description_long">Takes a picture of with the front/back camera and uploads it to FMD Server. Currently only uploading to FMD Server is supported. You can send this command via other transport channels, too, and the picture will be uploaded to FMD Server (if an account exists).</string>
    <string name="cmd_camera_response_no_fmd_server">Cannot take picture: no FMD Server account exists.</string>
    <string name="cmd_camera_response_success">"The device is taking a picture and will send it to FMD Server. You can view it here soon: %s</string>
    <string name="cmd_delete_description_short">Factory-reset the device</string>
    <string name="required_permissions_title">Required Permissions</string>
    <string name="transport_sms_title">SMS</string>
    <string name="transport_sms_description">Send commands to your phone over SMS. E.g., text \"fmd help\" to your phone. FMD will reply with an SMS.</string>
    <string name="transport_sms_description_auth">Only phone numbers that are in the allowlist can send commands. To send commands from a phone number that is not in the allowlist, you have to include the PIN: \"fmd mypin help\". For convenience, so that you don\'t have to re-type the PIN every time, this new phone number is added to a temporary allowlist for the next 10 minutes.</string>
    <string name="transport_sms_description_note">SMS may incur costs for both you and the person texting you. SMS requires your SIM card to be unlocked (e.g., after a reboot).</string>
    <string name="Enable">Enable</string>
</resources>