<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.OpenCellIdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <!-- Intro -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OpenCellId_help" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/OpenCellId_privacy" />

        <Button
            android:id="@+id/buttonOpenOpenCellIdWebsite"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/OpenCellId_open_website" />

        <!-- Tower Collector -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/OpenCellId_tower_collector_info" />

        <Button
            android:id="@+id/buttonDownloadTowerCollector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/OpenCellId_tower_collector_download" />

        <!-- API Access Token -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/FMD.Text.SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/OpenCellId_API_Key_Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextOpenCellIDAPIKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0.8"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="" />

            <Button
                android:id="@+id/buttonPaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paste" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonTestOpenCellId"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/OpenCellId_test_opencellid" />

        <TextView
            android:id="@+id/textViewTestOpenCellIdResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textIsSelectable="true"
            tools:text="Response" />

    </LinearLayout>

</ScrollView>